squash QA bugs
* update width variables of `header-3`
* fix center alignment utility class

--- a/src/components/headers/2/index.styl
+++ b/src/components/headers/2/index.styl
@@ -24,8 +24,8 @@ header-2(scheme = __default)
                 justify-content: space-between
                 align-items: center
             +min(3)
-                width: b3_content_width
-                min-width: b3_content_min_width
+                width: content_width_b3
+                min-width: content_width_b3_min
                 padding: 0
             h1
                 display: flex
