--- a/src/styles/_/modules/layout/utilities.styl
+++ b/src/styles/_/modules/layout/utilities.styl
@@ -1,6 +1,6 @@
 .center
     display: flex
-    align-content: center
+    align-items: center
     justify-content: center
 
 .overflow
